fix: corrige uso de csrf